# mp2-lab2-matrix

./: .gitignore  CMakeLists.txt
cmake/: function.cmake
include/: CMakeLists.txt  tmatrix.h
samples/: CMakeLists.txt
slns/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  vecmatr.sln
slns/gtest/: cmake_install.cmake  gtest.vcxproj  gtest.vcxproj.filters
slns/samples/: cmake_install.cmake  samp_mat.vcxproj  samp_mat.vcxproj.filters
slns/test/: cmake_install.cmake  test_vecmatr.vcxproj  test_vecmatr.vcxproj.filters
test/: CMakeLists.txt  test_tmatrix.cpp  test_tvector.cpp
